     - [13625] trackMeNurbs example produce an assertion failed with MSVC: 
               "list iterator not incrementable"
     - [13626] testXmlParser produre a Debug assertion failed with MSVC 
     - [13678] Cannot build all the examples if no display capability is 
	       available
     - [13679] GDI not detected on Windows 7 (64 bit) with Visual C++ Express 2010
	
----------------------------------------------
ViSP 2.6.1 (released October 20th, 2011)
  - New features
     - Introduction of Lapack support used for the SVD decomposition in vpMatrix
     - Introduction of vpAROgre that enables augmented reality applications 
       based on Ogre 3D. Some examples are provided in examples/ogre-simulator
     - Add cylinder's tracking in the model-based tracker.
     - Reintroduce OpenCV 2.0.0 support lost in ViSP 2.6.0
     - Introduction of vpKinect, a wrapper of libfreenect to support the 
       Kinect device
     - Introduction of vpMoment and vpFeatureMoment classes to be able to 
       consider 2D image moments as visual feature in visual servoing
  - Improvements
     - For firewire cameras framegrabbing with vp1394TwoGrabber, it is now
       possible to select a specific camera with its GUID by using setCamera()
     - All the specific Xml parser (vpMbtXmlParser, vpXmlParserCamera)
       inherit now from vpXmlParser
     - Memory leaks suppression in vpWireFrameSimulator, vpMe, vpXmlParser,
       vpMbtXmlParser, vpXmlParserCamera, vpMbTracker, vpFeatureLuminance, 
       vpRobotSimulator, vpFFMPEG, vpBSpline
     - It is now possible to grab images from an usb webcam with the
       vpV4l2Grabber class that is based on the video 4 linux 2 driver.
     - When it was possible without braking the backward compatibilty 
       std::list was introduced instead of vpList. Some of the functions that 
       use vpList are now deprecated.
     - Better detection of image or video file types when used in vpImageIo,
       vpVideoReader and vpVideoWriter